add image to md

--- a/src/pages/blog/2019-02-27-bacon.md
+++ b/src/pages/blog/2019-02-27-bacon.md
@@ -2,6 +2,7 @@
 layout: blog
 title: Bacon
 date: 2019-02-26T17:49:19.310Z
+cover_image: '../../images/bacon.jpg'
 description: Spicay bacon ingredients
 ---
 Spicy jalapeno bacon ipsum dolor amet short loin kevin pig venison drumstick hamburger, burgdoggen kielbasa ham hock. Cupim andouille picanha turducken drumstick filet mignon. Pastrami meatball drumstick corned beef kevin jerky buffalo filet mignon jowl chuck alcatra beef turkey. Capicola filet mignon bresaola, porchetta swine tongue corned beef pancetta. Pork belly cupim buffalo swine. Pancetta beef ribs alcatra, swine boudin pastrami landjaeger.
