--- a/src/pages/blog/2019-02-27-lorem.md
+++ b/src/pages/blog/2019-02-27-lorem.md
@@ -2,7 +2,7 @@
 layout: blog
 title: Lorem
 date: 2019-02-27T12:46:51.386Z
-cover_image: /img/lorem.jpg
+cover_image: ../../images/lorem.jpg
 description: Lorem random text/
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fusce id velit ut tortor pretium viverra suspendisse potenti nullam. Vulputate eu scelerisque felis imperdiet proin fermentum leo vel. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra. Porttitor lacus luctus accumsan tortor posuere ac ut. Volutpat commodo sed egestas egestas fringilla phasellus. Sagittis id consectetur purus ut faucibus pulvinar elementum. Pulvinar etiam non quam lacus. Lectus quam id leo in vitae turpis massa. Commodo viverra maecenas accumsan lacus vel.
