--- a/src/pages/blog/2019-02-27-train.md
+++ b/src/pages/blog/2019-02-27-train.md
@@ -2,7 +2,7 @@
 layout: blog
 title: Train
 date: 2019-02-27T13:39:05.519Z
-cover_image: /src/images/train.jpg
+cover_image: /img/train.jpg
 description: Train description.
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mollis aliquam ut porttitor leo. Morbi enim nunc faucibus a pellentesque sit amet. Nascetur ridiculus mus mauris vitae ultricies leo. Suspendisse potenti nullam ac tortor. Enim sit amet venenatis urna cursus eget. Nunc sed id semper risus in.
